Added functionality so that only one manager can be entered for the project

--- a/output/team.html
+++ b/output/team.html
@@ -25,14 +25,53 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Derick</h2>
+        <h2 class="card-title">Anna</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 789</li>
+            <li class="list-group-item">Email: <a href="mailto:anna.m.kron">anna.m.kron</a></li>
+            <li class="list-group-item">Office number: 123</li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Derick</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: 007</li>
             <li class="list-group-item">Email: <a href="mailto:dfabert@gmail.com">dfabert@gmail.com</a></li>
-            <li class="list-group-item">Office number: 789456123</li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/dfabert" target="_blank" rel="noopener noreferrer">dfabert</a></li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Brown</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 147</li>
+            <li class="list-group-item">Email: <a href="mailto:brown@line.com">brown@line.com</a></li>
+            <li class="list-group-item">School: Purdue</li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Cony</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 123546789</li>
+            <li class="list-group-item">Email: <a href="mailto:cony@line.com">cony@line.com</a></li>
+            <li class="list-group-item">School: Indiana</li>
         </ul>
     </div>
 </div>
