added video for submission

--- a/output/team.html
+++ b/output/team.html
@@ -31,8 +31,8 @@
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: 789</li>
-            <li class="list-group-item">Email: <a href="mailto:anna.m.kron">anna.m.kron</a></li>
-            <li class="list-group-item">Office number: 123</li>
+            <li class="list-group-item">Email: <a href="mailto:anna@email.com">anna@email.com</a></li>
+            <li class="list-group-item">Office number: 789</li>
         </ul>
     </div>
 </div>
@@ -44,8 +44,21 @@
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: 007</li>
-            <li class="list-group-item">Email: <a href="mailto:dfabert@gmail.com">dfabert@gmail.com</a></li>
+            <li class="list-group-item">Email: <a href="mailto:derick@email.com">derick@email.com</a></li>
             <li class="list-group-item">GitHub: <a href="https://github.com/dfabert" target="_blank" rel="noopener noreferrer">dfabert</a></li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Eric</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 456</li>
+            <li class="list-group-item">Email: <a href="mailto:Eric@mail.com">Eric@mail.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/eric" target="_blank" rel="noopener noreferrer">eric</a></li>
         </ul>
     </div>
 </div>
@@ -56,9 +69,9 @@
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 147</li>
-            <li class="list-group-item">Email: <a href="mailto:brown@line.com">brown@line.com</a></li>
-            <li class="list-group-item">School: Purdue</li>
+            <li class="list-group-item">ID: 159</li>
+            <li class="list-group-item">Email: <a href="mailto:brown@email.com">brown@email.com</a></li>
+            <li class="list-group-item">School: Purude</li>
         </ul>
     </div>
 </div>
@@ -69,8 +82,8 @@
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 123546789</li>
-            <li class="list-group-item">Email: <a href="mailto:cony@line.com">cony@line.com</a></li>
+            <li class="list-group-item">ID: 753</li>
+            <li class="list-group-item">Email: <a href="mailto:cony@email.com">cony@email.com</a></li>
             <li class="list-group-item">School: Indiana</li>
         </ul>
     </div>
